Fixing spacing between 'Pick Phase' and 'Add to Cart' on the product page

--- a/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
@@ -616,7 +616,7 @@
         max-width: 100%; // Constrain width in Firefox
 
         &.map-add-to {
-            margin-top: 25px;
+            margin-top: 5px;
 
             @include bp(max-width, $bp-medium) {
                 margin-top: 0;
